# mimelens-training

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
configs/runs/: headline_bpe16k.yaml  headline_byte.yaml  headline_template.yaml  short_seq_template.yaml
docs/: 02-model-architecture.md  04-training-protocol.md
examples/: classify.py
python/binary_embedding/: __init__.py  _native.pyi  constants.py
python/binary_embedding/analysis/: jsonl.py  spectral.py
python/binary_embedding/data/: cache.py  dataset.py  sources.py  splits.py
python/binary_embedding/models/: encoder.py
python/binary_embedding/training/: callbacks.py  config.py  eval_loop.py  heads.py  losses.py  manifest.py  optim.py  pretrain.py  registry.py  regularization.py  runtime.py  throughput.py  trainer.py
scripts/: build_cache.py
src/: errors.rs  lib.rs  mlm.rs  sampling.rs  tokenize.rs
tests/: test_byte_fastpath.py  test_callbacks.py  test_config.py  test_ema.py  test_encoder.py  test_followups.py  test_losses.py  test_mlm_distribution.py  test_native.py  test_param_groups.py  test_schedules.py
