[package]
name = "binary_embedding_native"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust hot-path for MimeLens training (sampling, BPE tokenization, MLM masking)."
publish = false

[lib]
# maturin maps this into binary_embedding._native via [tool.maturin].module-name
name = "_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py312"] }
# bbpe: the binary-BPE tokenizer crate (https://github.com/mjbommar/binary-bpe),
# pinned to a released tag. For local development against a checkout, swap this
# for `bbpe = { path = "../binary-bpe", default-features = false }`.
bbpe = { git = "https://github.com/mjbommar/binary-bpe", tag = "v0.6.5", default-features = false }
tokenizers = { version = "0.22", default-features = true }
rayon = "1.10"
rand = "0.8"
rand_pcg = "0.3"
anyhow = "1.0"
thiserror = "2.0"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false
strip = "symbols"

[profile.dev]
opt-level = 1
